# skin_scan

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  Dockerfile  atualizar_bd.py  auth.py  config.py  criar_bd_vetorial.py  database.py  ingest.py  ingestao_pdfs.py  main.py  pyproject.toml  schemas.py  vetorial.py
backend/data/: corpus_vetorial.txt
backend/data/pdfs/: corpus_medico_consolidado.txt  equimose.txt
backend/scripts/: limpar_pdfs.py
docs/: backend.md  banco-relacional.md
frontend/: .gitignore  Dockerfile  app.json  nginx.conf  package-lock.json  package.json
frontend/src/app/: _layout.tsx  assistant.tsx  camera.tsx  index.tsx  signup.tsx
frontend/src/app/components/: button.tsx  drawerOptions.tsx  header.tsx  input.tsx  modal.tsx
frontend/src/components/: bottonSheet.tsx  button.tsx  diagnostico.tsx  drawerOptions.tsx  header.tsx  input.tsx  inputChat.tsx  modal.tsx  photo.tsx  photoUpload.tsx
frontend/src/context/: authContext.tsx  chatContext.tsx  photoContext.tsx
frontend/src/services/: api.ts
src/app/: _layout.tsx  assistant.tsx  index.tsx  signup.tsx
src/app/components/: diagnostico.tsx  drawerOptions.tsx  header.tsx  input.tsx  modal.tsx
