[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.3",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "python-multipart>=0.0.32",
    "sentence-transformers>=5.5.1",
]
